--- a/graphql_server/package.json
+++ b/graphql_server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
