--- a/graphql_server/package.json
+++ b/graphql_server/package.json
@@ -10,8 +10,8 @@
   "author": "zeroaan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3",
-    "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
