--- a/graphql_server/package.json
+++ b/graphql_server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "graphql",
+  "name": "graphql_server",
   "version": "1.0.0",
-  "description": "graphql",
+  "description": "graphql_server",
   "main": "index.ts",
   "scripts": {
     "start": "nodemon",
@@ -10,8 +10,9 @@
   "author": "zeroaan",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.19.2",
     "axios": "^0.21.1",
-    "graphql-yoga": "^1.18.3",
+    "graphql": "^15.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
